fix: downgrade java version due to railway version