@@ -2,6 +2,7 @@ package edu.dio.deploy.controller;
 
 import java.net.URI;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -45,7 +46,7 @@ public class ContatoController {
 			service.listarContatos()
 				.stream()
 				.map(ContatoListarRecord::new)
-				.toList();
+				.collect(Collectors.toList());
 		return ResponseEntity.ok(contatos);
 	}
 	
